HED-2009 content carousel extended layout issue

--- a/src/component-library/careers/CardBlockCarousel/CardBlockCarouselDesktop.module.scss
+++ b/src/component-library/careers/CardBlockCarousel/CardBlockCarouselDesktop.module.scss
@@ -52,7 +52,6 @@
   padding: $spacing-4 $spacing-7;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   gap: $spacing-3;
 }
 
